--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
-    <script src="main.js"></script>
+    <div id="lecanva">
+        <script src="main.js"></script>
+    </div>
+    
+    <button onclick="refresh()" style="display: block;">refresh</button>
 </body>
 </html>
