--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="main.js"></script>
     </div>
     
-    <button onclick="refresh()" style="display: block;">refresh</button>
+    <button onclick="refresh()" style="display: flex;">refresh</button>
+    <button onclick="clignottement()" style="display: flex;">clignotement</button>
 </body>
 </html>
