c complicado, jveux faire une anime de diagonales

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
         <script src="main.js"></script>
     </div>
     
-    <button onclick="refresh()" style="display: flex;">refresh</button>
-    <button onclick="clignottement()" style="display: flex;">clignotement</button>
+    <button onclick="refresh()" style=" margin: fit-content;">refresh</button>
+    <button onclick="clignottement()" style=" margin: fit-content;">clignotement</button>
+    <button onclick="drawKikoojap()" style=" margin: fit-content;">drawKikoojap</button>
+    <button onclick="sideScroll()" style=" margin: fit-content;">a little side scroll</button>
+    <button onclick="invertAll()" style=" margin: fit-content;">invert All</button>
+    <button onclick="littleAnimation()" style=" margin: fit-content;">little Animation</button>
 </body>
 </html>
